--- a/app/src/main/res/layout/activity_mood_survey.xml
+++ b/app/src/main/res/layout/activity_mood_survey.xml
@@ -5,11 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MoodSurveyActivity">
-    
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="541dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="0dp" />
 
     <Button
         android:id="@+id/fragment1btn"
