--- a/app/src/main/res/layout/fragment_pain.xml
+++ b/app/src/main/res/layout/fragment_pain.xml
@@ -1,17 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.nitish.typewriterview.TypeWriterView
+        android:id="@+id/typeWriterView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment 1"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="30dp" />
+        android:layout_height="567dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
 
-</FrameLayout>
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="284dp"
+        android:background="@drawable/white_background"
+        android:baselineAligned="false"
+        android:shadowColor="#000000"
+        android:shadowDx="1.5"
+        android:shadowDy="1.3"
+        android:shadowRadius="1.6"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColorHint="#601D1D"
+        android:textSize="32sp"
+        app:fontFamily="@font/baloo_paaji" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="188dp"
+        android:background="@drawable/painicon" />
+
+    <com.google.android.material.slider.Slider
+        android:layout_width="228dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="201dp" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="187dp"
+        android:background="@drawable/happyperson" />
+</RelativeLayout>
