--- a/app/src/main/res/layout/fragment_pain.xml
+++ b/app/src/main/res/layout/fragment_pain.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/white_background"
     android:orientation="vertical"
     tools:context=".PainFragment">
 
@@ -17,7 +18,6 @@
         android:layout_centerInParent="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="284dp"
-        android:background="@drawable/white_background"
         android:baselineAligned="false"
         android:shadowColor="#000000"
         android:shadowDx="1.5"
@@ -38,13 +38,6 @@
         android:layout_marginBottom="188dp"
         android:background="@drawable/painicon" />
 
-    <com.google.android.material.slider.Slider
-        android:layout_width="228dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="201dp" />
-
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -53,4 +46,29 @@
         android:layout_marginStart="4dp"
         android:layout_marginBottom="187dp"
         android:background="@drawable/happyperson" />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/PainSlider"
+        android:layout_width="228dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="201dp"
+        android:background="@drawable/round_btn"
+        android:stepSize="1"
+        android:valueFrom="0"
+        android:valueTo="10" />
+
+    <TextView
+        android:id="@+id/PainNumberView"
+        android:layout_width="142dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="109dp"
+        android:background="@drawable/white_background"
+        android:text="1"
+        android:textAlignment="center"
+        android:textSize="60sp" />
+
 </RelativeLayout>
