--- a/app/src/main/res/layout/activity_mood_survey.xml
+++ b/app/src/main/res/layout/activity_mood_survey.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/pagebkg"
     tools:context=".MoodSurveyActivity">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="541dp"
@@ -20,26 +20,31 @@
 
         <TextView
             android:id="@+id/text_view"
-            android:layout_width="129dp"
-            android:layout_height="72dp"
-            android:layout_above="@+id/progress_bar"
-            android:layout_gravity="bottom|center"
+            android:layout_width="133dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="132dp"
+            android:layout_marginTop="442dp"
             android:fontFamily="@font/baloo_paaji"
             android:text="0%"
+            android:textAlignment="center"
             android:textColor="#040202"
             android:textSize="34sp" />
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="346dp"
-            android:layout_height="98dp"
+            android:layout_width="345dp"
+            android:layout_height="57dp"
+            android:layout_alignParentEnd="true"
+
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/progress_bar_background" />
-    </FrameLayout>
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="110dp" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/fragment1btn"
