--- a/app/src/main/res/layout/activity_mood_survey.xml
+++ b/app/src/main/res/layout/activity_mood_survey.xml
@@ -36,14 +36,27 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="345dp"
-            android:layout_height="57dp"
+            android:layout_width="351dp"
+            android:layout_height="44dp"
             android:layout_alignParentEnd="true"
 
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="110dp" />
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="123dp" />
+
+        <com.linx.stress_free_app.AnimationController.Typewriter
+            android:id="@+id/typewriterLoadingDialog"
+            android:layout_width="357dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="52dp"
+            android:textAlignment="center"
+            android:textColor="#1B1A1A"
+            android:textSize="34sp"
+            app:fontFamily="@font/baloo_paaji" />
     </RelativeLayout>
 
     <Button
@@ -51,19 +64,22 @@
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="50dp"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/black"
-        android:text="fragment 1" />
+        android:layout_marginBottom="51dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="Begin" />
 
     <Button
         android:id="@+id/fragment2btn"
         android:layout_width="150dp"
         android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="660dp"
         android:backgroundTint="@color/black"
         android:text="fragment 2" />
 
