--- a/app/src/main/res/layout/fragment_pain.xml
+++ b/app/src/main/res/layout/fragment_pain.xml
@@ -39,12 +39,12 @@
         android:background="@drawable/painicon" />
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="68dp"
+        android:layout_height="74dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="187dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="193dp"
         android:background="@drawable/happyperson" />
 
     <com.google.android.material.slider.Slider
@@ -70,5 +70,14 @@
         android:text="1"
         android:textAlignment="center"
         android:textSize="60sp" />
+
+    <Button
+        android:id="@+id/PainSubmit"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="42dp"
+        android:text="Submit" />
 
 </RelativeLayout>
