--- a/app/src/main/res/layout/activity_mood_survey.xml
+++ b/app/src/main/res/layout/activity_mood_survey.xml
@@ -33,6 +33,12 @@
             android:textColor="#040202"
             android:textSize="34sp" />
 
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
@@ -57,31 +63,35 @@
             android:textColor="#1B1A1A"
             android:textSize="34sp"
             app:fontFamily="@font/baloo_paaji" />
+
     </RelativeLayout>
 
     <Button
-        android:id="@+id/fragment1btn"
+        android:id="@+id/Backbtn"
         android:layout_width="150dp"
         android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginStart="247dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="46dp"
         android:backgroundTint="@color/purple_200"
-        android:text="Begin" />
+        android:text="Next" />
 
     <Button
-        android:id="@+id/fragment2btn"
+        android:id="@+id/Nextbtn"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="660dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="229dp"
+        android:layout_marginRight="229dp"
+        android:layout_marginBottom="41dp"
         android:backgroundTint="@color/black"
-        android:text="fragment 2" />
+        android:text="Back" />
 
 
 </RelativeLayout>
