--- a/app/src/main/res/layout/fragment_bed_time.xml
+++ b/app/src/main/res/layout/fragment_bed_time.xml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/white_background"
     tools:context=".BedTimeFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <com.nitish.typewriterview.TypeWriterView
+        android:id="@+id/typeWriterView3"
+        android:layout_width="match_parent"
+        android:layout_height="362dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="363dp"
+        android:baselineAligned="false"
+        android:shadowColor="#000000"
+        android:shadowDx="1.5"
+        android:shadowDy="1.3"
+        android:shadowRadius="1.6"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColorHint="#601D1D"
+        android:textSize="32sp"
+        app:fontFamily="@font/baloo_paaji" />
+
     <Button
         android:id="@+id/timebutton"
         android:layout_width="wrap_content"
@@ -14,12 +42,23 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="82dp"
-        android:layout_marginTop="279dp"
-        android:layout_marginEnd="87dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="84dp"
         android:text="select Time"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30dp" />
+
+    <Button
+        android:id="@+id/sumbitTime"
+        android:layout_width="150dp"
+        android:layout_height="61dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="124dp"
+        android:layout_marginBottom="181dp"
+        android:text="Button" />
 
 </RelativeLayout>
