--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,18 +6,19 @@
     tools:context=".MainMenu.MainMenuFragments.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="382dp"
-        android:layout_height="250dp"
+        android:id="@+id/NewsRecyler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="596dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="480dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -38,25 +39,25 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="368dp"
-        android:layout_height="162dp"
+        android:layout_width="369dp"
+        android:layout_height="81dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="367dp"
+        android:layout_marginBottom="448dp"
         android:text="Due to your stress level we  have to choose these things  beacuse" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="376dp"
-        android:layout_height="93dp"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="255dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="393dp"
         android:text="Explore More!" />
 
     <TextView
