--- a/app/src/main/res/layout/fragment_meditation.xml
+++ b/app/src/main/res/layout/fragment_meditation.xml
@@ -13,8 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="135dp"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="176dp"
         android:text="Morning" />
 
     <TextView
@@ -24,32 +24,33 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="67dp"
         android:text="Start your day" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="165dp"
+        android:layout_width="252dp"
+        android:layout_height="103dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="113dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginStart="122dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="350dp"
+        android:background="@drawable/breathexercise"
         android:text="Button" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="165dp"
+        android:layout_width="252dp"
+        android:layout_height="103dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="23dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="143dp"
         android:text="Button" />
 
     <TextView
@@ -59,8 +60,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="118dp"
-        android:layout_marginTop="373dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="343dp"
         android:text="Afternoon" />
 
     <TextView
@@ -70,30 +71,31 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="616dp"
+        android:layout_marginStart="127dp"
+        android:layout_marginTop="539dp"
         android:text="Night" />
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="264dp"
-        android:layout_height="165dp"
+        android:layout_width="251dp"
+        android:layout_height="106dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="123dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="491dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="522dp"
         android:text="Button" />
 
     <LinearLayout
         android:id="@+id/verticalStepProgressBar"
-        android:layout_width="55dp"
-        android:layout_height="0dp"
+        android:layout_width="71dp"
+        android:layout_height="499dp"
         android:layout_alignTop="@+id/button1"
         android:layout_alignBottom="@+id/button3"
         android:layout_alignParentStart="true"
         android:layout_marginStart="-3dp"
+        android:layout_marginBottom="-1dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:weightSum="2">
@@ -131,6 +133,16 @@
         <!-- Add more ImageView and View elements for additional steps and lines as needed -->
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="216dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="43dp"
+        android:text="Explanation Video Click here" />
 
 
 </RelativeLayout>
