--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -7,14 +7,6 @@
     tools:context=".MainMenu.MainMenuFragments.ExerciseFragment">
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="73dp"
-        android:text="Start your day" />
-
-    <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +22,7 @@
         android:layout_height="97dp"
         android:layout_below="@id/textView3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="-318dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/akwhitelogo"
         android:text="Button" />
@@ -69,18 +61,18 @@
         android:layout_height="106dp"
         android:layout_below="@id/textView2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/akwhitelogo"
         android:text="Button" />
 
     <LinearLayout
         android:id="@+id/verticalStepProgressBar"
-        android:layout_width="68dp"
-        android:layout_height="465dp"
+        android:layout_width="71dp"
+        android:layout_height="415dp"
         android:layout_alignTop="@+id/button3"
         android:layout_alignBottom="@+id/button2"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="-213dp"
+        android:layout_marginEnd="-1dp"
+        android:layout_marginBottom="-163dp"
         android:layout_toStartOf="@+id/button3"
         android:gravity="center_horizontal"
         android:orientation="vertical"
@@ -127,18 +119,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="51dp"
         android:text="Explanation Video Click here" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/images_recycler_view"
-        android:layout_width="382dp"
-        android:layout_height="148dp"
+        android:layout_width="386dp"
+        android:layout_height="217dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="3dp" />
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="5dp" />
 
 </RelativeLayout>
