--- a/app/src/main/res/layout/activity_meditation_player3.xml
+++ b/app/src/main/res/layout/activity_meditation_player3.xml
@@ -8,7 +8,7 @@
     tools:context=".MeditationPlayer.MeditationPlayerActivity3">
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_barAudio"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="373dp"
         android:layout_height="wrap_content"
