--- a/app/src/main/res/layout/activity_exercise_player.xml
+++ b/app/src/main/res/layout/activity_exercise_player.xml
@@ -19,7 +19,7 @@
         android:layout_marginEnd="19dp" />
 
     <ProgressBar
-        android:id="@+id/progress_bar3"
+        android:id="@+id/progress_bar4"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="357dp"
         android:layout_height="wrap_content"
@@ -50,6 +50,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="45dp"
         android:layout_marginTop="81dp"
-        android:text="TextView" />
+        android:text="act1" />
 
 </RelativeLayout>
