--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -17,12 +17,12 @@
         android:text="Yoga 1" />
 
     <ImageButton
-        android:id="@+id/button3"
+        android:id="@+id/medbutton1"
         android:layout_width="253dp"
         android:layout_height="97dp"
         android:layout_below="@id/textView3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-318dp"
+        android:layout_marginTop="-313dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/akwhitelogo"
         android:text="Button" />
@@ -31,18 +31,18 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button3"
+        android:layout_below="@id/medbutton1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Yoga 2" />
 
     <ImageButton
-        android:id="@+id/button2"
+        android:id="@+id/medbutton2"
         android:layout_width="253dp"
         android:layout_height="97dp"
         android:layout_below="@id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="187dp"
         android:background="@drawable/akwhitelogo"
         android:text="Button" />
 
@@ -50,30 +50,31 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button2"
+        android:layout_below="@id/medbutton2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Yoga 3" />
 
     <ImageButton
-        android:id="@+id/button1"
+        android:id="@+id/button2"
         android:layout_width="251dp"
         android:layout_height="106dp"
         android:layout_below="@id/textView2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="-294dp"
         android:background="@drawable/akwhitelogo"
+        android:contentDescription="TODO"
         android:text="Button" />
 
     <LinearLayout
         android:id="@+id/verticalStepProgressBar"
-        android:layout_width="71dp"
-        android:layout_height="415dp"
-        android:layout_alignTop="@+id/button3"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_marginEnd="-1dp"
-        android:layout_marginBottom="-163dp"
-        android:layout_toStartOf="@+id/button3"
+        android:layout_width="76dp"
+        android:layout_height="421dp"
+        android:layout_alignTop="@+id/medbutton1"
+        android:layout_alignBottom="@+id/medbutton2"
+        android:layout_marginEnd="-6dp"
+        android:layout_marginBottom="-2dp"
+        android:layout_toStartOf="@+id/medbutton1"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:weightSum="2">
@@ -82,7 +83,9 @@
             android:id="@+id/step1"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/circle_uncompleted" />
+            android:contentDescription="TODO"
+            android:src="@drawable/circle_uncompleted"
+            tools:ignore="ImageContrastCheck" />
 
         <View
             android:layout_width="2dp"
@@ -94,7 +97,8 @@
             android:id="@+id/step2"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/circle_uncompleted" />
+            android:src="@drawable/circle_uncompleted"
+            tools:ignore="ImageContrastCheck" />
 
         <View
             android:layout_width="2dp"
@@ -106,6 +110,7 @@
             android:id="@+id/step3"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:contentDescription="TODO"
             android:src="@drawable/circle_uncompleted" />
 
         <!-- Add more ImageView and View elements for additional steps and lines as needed -->
@@ -121,7 +126,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="51dp"
-        android:text="Explanation Video Click here" />
+        android:text="Explanation Video Click here"
+        android:textColor="#263238" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/images_recycler_view"
