--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,6 +25,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecoRecyclerView"
         android:layout_width="380dp"
         android:layout_height="208dp"
         android:layout_alignParentStart="true"
@@ -38,7 +39,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/whyReco"
         android:layout_width="369dp"
         android:layout_height="81dp"
         android:layout_alignParentStart="true"
